--- a/package.json
+++ b/package.json
@@ -12,5 +12,14 @@
   "dependencies": {
     "axios": "^1.6.2",
     "cheerio": "^1.0.0-rc.12"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AleiStudio/wantnsfw.git"
+  },
+  "bugs": {
+    "url": "https://github.com/AleiStudio/wantnsfw/issues"
+  },
+  "homepage": "https://github.com/AleiStudio/wantnsfw#readme"
 }
